# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./users";
 export * from "./services";
 export * from "./timeslots";
 export * from "./appointment-comments";
+export * from "./client-progress";
